--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -340,7 +340,7 @@ label::after {
   .container_red,
   .container_opening .container_follow,
   .container_learning2,
-  .container_experience {
+  .container_ex {
     display: flex;
     flex-direction: column;
     justify-content: center;
