--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -376,6 +376,50 @@ label::after {
 }
 
 @media only screen and (min-with: 600px) {
+  main {
+    background-color: blue;
+  }
+
+  .p {
+    font-size: 16px;
+  }
+
+  .trythis,
+  .container_red,
+  .container_opening .container_follow,
+  .container_learning2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+  }
+
+  .img-front1,
+  .item_follow,
+  .item {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .icons {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .img-front1 img,
+  .img4 {
+    max-width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+
+  .float {
+    max-width: 100%;
+    height: 400px;
+    margin-left: -10px;
+  }
 }
 
 @media (min-width: 600px) and (max-width: 1200px) {
