--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -66,7 +66,6 @@ header {
   align-content: center;
   justify-content: center;
   background-color: #003333;
-  height: 600px;
 }
 
 .img-front1 {
@@ -84,7 +83,6 @@ header {
 
 .container_red {
   margin-top: 10px;
-  height: 600px;
   padding: 20px;
 }
 
@@ -103,12 +101,8 @@ header {
 }
 
 .container_opening {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 250px;
   margin-top: 10px;
+  text-align: center;
 }
 
 .container_follow {
@@ -116,7 +110,6 @@ header {
   align-items: center;
   justify-content: space-around;
   margin-top: 10px;
-  height: 250px;
 }
 
 footer {
@@ -339,7 +332,7 @@ label::after {
 
   .trythis,
   .container_red,
-  .container_opening .container_follow,
+  .container_follow,
   .container_learning2 {
     display: flex;
     flex-direction: column;
@@ -353,7 +346,6 @@ label::after {
   .item {
     max-width: 100%;
     display: flex;
-    flex-direction: column;
   }
 
   .icons {
@@ -364,7 +356,7 @@ label::after {
   .img-front1 img,
   .img4 {
     max-width: 100%;
-    height: 300px;
+    height: 200px;
     object-fit: cover;
   }
 
