--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -327,6 +327,10 @@ label::after {
     align-items: center;
   }
 
+  .item_explorer {
+    border: 7px solid white;
+  }
+
   .img-front1,
   .item_follow,
   .item {
