--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -47,7 +47,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: -15px;
+  padding: -26px;
 }
 
 .img-header img {
@@ -270,6 +270,7 @@ label::after {
   width: 300px;
   height: 300px;
   padding-top: 45px;
+  margin-left: 60px;
 }
 
 .text4 {
