--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -137,7 +137,6 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 20px;
   margin-top: 5px;
 }
 
@@ -262,10 +261,6 @@ nav ul {
   padding: 0px;
 }
 
-.current {
-  color: #8c0335;
-}
-
 img {
   width: 100%;
 }
@@ -277,6 +272,10 @@ img {
   height: 300px;
   object-fit: cover;
   max-width: 100%;
+}
+
+.linkcolor {
+  color: #ffffff;
 }
 
 a {
@@ -334,7 +333,7 @@ label::after {
 
   .trythis,
   .container_red .container_learning,
-  .container_explore {
+  .container_opening .container_explore {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -349,7 +348,9 @@ label::after {
   }
 
   .img-front1,
-  .item {
+  .item,
+  .hours,
+  .itemfollow {
     max-width: 100%;
     display: flex;
     flex-direction: column;
@@ -358,6 +359,7 @@ label::after {
   .icons {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
   }
 
   .img-fun {
@@ -376,12 +378,6 @@ label::after {
     max-width: 100%;
     height: 400px;
     margin-left: -10px;
-  }
-}
-
-@media (min-with: 600px) {
-  main {
-    background-color: yellow;
   }
 }
 
