--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -187,6 +187,7 @@ footer {
 
 .container_learning {
   display: flex;
+  flex-direction: column;
   max-width: 100%;
   align-items: center;
   padding: 50px;
@@ -307,7 +308,6 @@ label::after {
 
 .rocket,
 .math {
-  width: 800px;
   height: 300px;
   max-width: 100%;
 }
@@ -363,7 +363,8 @@ label::after {
   }
 }
 
-.img-school {
+.img-school,
+.math {
   max-width: 100%;
   height: 300px;
   justify-content: center;
