--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,7 +27,7 @@ nav,
 }
 
 nav ul {
-  padding: 10px;
+  padding: 0px;
 }
 
 nav li {
@@ -36,7 +36,7 @@ nav li {
 
 nav a {
   text-decoration: none;
-  padding: 10px;
+  padding: 5px;
   display: block;
 }
 
@@ -65,7 +65,7 @@ nav a {
 
 /* Links */
 a {
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:hover {
