--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -121,9 +121,9 @@ header {
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  border: 7px solid lightgray;
   max-width: 100%;
-  margin: 5px;
+  padding: 10px;
+  padding-top: 10px;
   background-color: #006666;
 }
 
@@ -402,7 +402,7 @@ label::after {
     align-items: center;
     max-width: 100%;
     margin: 5px;
-    background-color: #003333;
+    background-color: #006666;
     padding: 5px;
   }
 
